--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -74,7 +74,7 @@
   "Spell": "Spell",
   "Item": "Item",
   "A custom item.": "A custom item.",
-  "This sheet will be erased. Do you confirm?": "This sheet will be erased. Do you confirm?",
+  "The sheet will be erased. Do you confirm?": "The sheet of {name} will be erased. Do you confirm?",
   "Confirm": "Confirm",
   "Yes": "Yes",
   "No": "No",
@@ -82,8 +82,9 @@
   "Def": "Def",
   "Items and conditions drawer.": "Items and conditions drawer.",
   "Roll {dice}": "Roll {dice}",
-  "{name} is ready for adventure!": "{name} is ready for adventure!",
+  "“{name}” prepares for adventure...": "“{name}” prepares for adventure...",
   "You may then swap any two attributes.": "You may then swap any two attributes.",
   "You may choose a weapon below:": "You may choose a weapon below:",
-  "You can take one item below:": "You can take one item below:"
+  "You can take one item below:": "You can take one item below:",
+  "Item from inherited your background of “{background}”": "Item from inherited your background of “{background}”"
 }
