--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -20,6 +20,10 @@
   "STR": "STR",
   "DEX": "DEX",
   "WIL": "WIL",
+  "STR ⇄ DEX": "STR ⇄ DEX",
+  "STR ⇄ WIL": "STR ⇄ WIL",
+  "DEX ⇄ WIL": "DEX ⇄ WIL",
+  "No swap.": "No swap.",
   "HP": "HP",
   "Max": "Max",
   "Current": "Current",
