--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -20,6 +20,10 @@
   "STR": "FOR",
   "DEX": "DEX",
   "WIL": "VOL",
+  "STR ⇄ DEX": "FOR ⇄ DEX",
+  "STR ⇄ WIL": "FOR ⇄ VOL",
+  "DEX ⇄ WIL": "DEX ⇄ VOL",
+  "No swap.": "Pas d'échange.",
   "HP": "PV",
   "Max": "Max",
   "Current": "Courant",
