feat: load/save from slots.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -96,5 +96,6 @@
   "You do need to have {fee} pips to retrieve “{name}”!": "You do need to have {fee} pips to retrieve “{name}”!",
   "One paw": "One paw",
   "Both paws": "Both paws",
-  "History": "History"
+  "History": "History",
+  "Manage your characters.": "Manage your characters."
 }
