--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -96,5 +96,6 @@
   "You do need to have {fee} pips to retrieve “{name}”!": "Vous avez besoin de {fee} pépins pour retirer « {name} » !",
   "One paw": "Une patte",
   "Both paws": "Deux pattes",
-  "History": "Historique"
+  "History": "Historique",
+  "Manage your characters.": "Gérer vos personnages."
 }
