--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -2,6 +2,7 @@
   "Languages": "Langues",
   "en-US": "English US",
   "fr-FR": "Français",
+  "Welcome to Mausrittes Sheet!": "Bienvenue sur la fiche de personnage Mausritter !",
   "Items": "Objets",
   "Conditions": "Conditions",
   "Birthsign": "Signe de naissance",
@@ -45,13 +46,16 @@
   "With advantage": "Avec avantage",
   "With disadvantage": "Avec désadvantage",
   "Need {score} or lower, roll {roll}.": "Besoin de faire {score} ou moins, lancé {roll}.",
-  "Create a new character": "Créer un nouveau personnage",
+  "Create a new character...": "Créer un nouveau personnage…",
+  "Save": "Enregistrer",
+  "Delete": "Supprimer",
+  "Empty": "Vide",
   "SUCCESS": "SUCCÉS",
   "FAILED": "ÉCHEC",
   "Clear:": "Retirer :",
   "STR save": "Sauvegarde de FOR",
   "DEX save": "Sauvegarde de DEX",
-  "WIL save": "Sauvegarde de WIL",
+  "WIL save": "Sauvegarde de VOL",
   "Choose...": "Choisissez…",
   "Improvised": "Improvisé",
   "Weapon": "Arme",
@@ -78,7 +82,7 @@
   "Spell": "Sort",
   "Item": "Objet",
   "A custom item.": "Un objet personnalisé.",
-  "The sheet of {name} will be erased. Do you confirm?": "Confirmez-vous l'effacement de la fiche de {name} ?",
+  "The sheet of “{name}” will be erased. Do you confirm?": "Confirmez-vous l'effacement de la fiche de « {name} » ?",
   "Confirm": "Confirmation",
   "Yes": "Oui",
   "No": "Non",
@@ -97,5 +101,6 @@
   "One paw": "Une patte",
   "Both paws": "Deux pattes",
   "History": "Historique",
-  "Manage your characters.": "Gérer vos personnages."
+  "Manage your characters.": "Gérer vos personnages.",
+  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche de « {dest} » par celle de « {name} » ?"
 }
