fix: build css and i18n

--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -47,6 +47,7 @@
   "With disadvantage": "Avec désadvantage",
   "Need {score} or lower, roll {roll}.": "Besoin de faire {score} ou moins, lancé {roll}.",
   "Create a new character...": "Créer un nouveau personnage…",
+  "Load": "Charger",
   "Save": "Enregistrer",
   "Delete": "Supprimer",
   "Empty": "Vide",
