--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -47,6 +47,7 @@
   "With disadvantage": "With disadvantage",
   "Need {score} or lower, roll {roll}.": "Need {score} or lower, roll {roll}.",
   "Create a new character...": "Create a new character...",
+  "Load": "Load",
   "Save": "Save",
   "Delete": "Delete",
   "Empty": "Empty",
@@ -82,7 +83,7 @@
   "Spell": "Spell",
   "Item": "Item",
   "A custom item.": "A custom item.",
-  "The sheet will be erased. Do you confirm?": "The sheet of “{name}” will be erased. Do you confirm?",
+  "The sheet of “{name}” will be erased. Do you confirm?": "The sheet of “{name}” will be erased. Do you confirm?",
   "Confirm": "Confirm",
   "Yes": "Yes",
   "No": "No",
