fix: load security

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -103,5 +103,6 @@
   "Both paws": "Both paws",
   "History": "History",
   "Manage your characters.": "Manage your characters.",
-  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?"
+  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?",
+  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?"
 }
