--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -49,6 +49,7 @@
   "Create a new character...": "Create a new character...",
   "Load": "Load",
   "Save": "Save",
+  "Saves": "Saves",
   "Delete": "Delete",
   "Empty": "Empty",
   "SUCCESS": "SUCCESS",
@@ -104,5 +105,7 @@
   "History": "History",
   "Manage your characters.": "Manage your characters.",
   "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?",
-  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?"
+  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?",
+  "Hirelings": "Hirelings",
+  "Summary of rules": "Summary of rules"
 }
