--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -49,6 +49,7 @@
   "Create a new character...": "Créer un nouveau personnage…",
   "Load": "Charger",
   "Save": "Enregistrer",
+  "Saves": "Les Sauvegardes",
   "Delete": "Supprimer",
   "Empty": "Vide",
   "SUCCESS": "SUCCÉS",
@@ -104,5 +105,47 @@
   "History": "Historique",
   "Manage your characters.": "Gérer vos personnages.",
   "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche de « {dest} » par celle de « {name} » ?",
-  "The current sheet will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche en cours par “{name}” ?"
+  "The current sheet will be overwritten by “{name}”. Do you confirm?": "Confirmez-vous le remplacement de la fiche en cours par “{name}” ?",
+  "Hirelings": "Employés",
+  "Summary of rules": "Résumé des règles",
+  "Time": "Le Temps",
+  "Fight": "Le Combat",
+  "Resting": "Le Repos",
+  "Magic": "La Magie",
+  "Round": "Round",
+  "For combat, each round is less than a minute.": "Pour le combat, un round dure moins d'une minute.",
+  "Turn": "Tour",
+  "For dungeon exploration, each turn is around 10 minutes.": "Pour l'exploration intérieure, un tour dure environ 10 minutes.",
+  "Watch": "Garde",
+  "In wilderness, each watch is 36 turns, about 6 hours.": "Pour l'exploration extèrieure, une garde dure environ 36 tours, soit 6 heures.",
+  "You roll a d20 equal or under your STR, DEX or WIL. Some saves are special:": "Lancer un d20, pour être réussi, le résultat doit être inférieur ou égal au score de FOR, DEX ou WIL en cours. Certaines sauvegardes sont spéciales :",
+  "Opposed saves": "En opposition",
+  "Make a Save, lowest successful value wins.": "Chaque intervenant fait une sauvegarde, le succès avec le tirage le plus bas l’emporte.",
+  "Advantage": "Avantage",
+  "When you roll a Save from a strong position, roll 2d20 and take the lowest result." : "En situation favorable, lancer 2d20 et prendre le plus bas.",
+  "Disadvantage": "Désavantage",
+  "When you roll a Save from a weakened position, roll 2d20 and take the highest result.": "En mauvaise situation, lancer 2d20 et prendre le plus haut.",
+  "Move and take an action below when it’s your turn.": "Effectur un déplacenent et une action lorsque c'est votre tour.",
+  "Surprise": "Surprendre",
+  "If enemy is surprised, you go before them. If enemy is not surprised, make a DEX Save to act before them.": "Si l’ennemi est surpris, agissez avant lui. Sinon, faites une sauvegarde de DEX pour agir avant.",
+  "Attacks": "Attaquer",
+  "Roll your weapon’s damage die and deal that much to an enemy, minus any armour. When an attack is impaired, deal d4 damage. When an attack is enhanced, deal d12 damage.": "Lancer le dé de l’arme, soustraire les éventuels points d’armure ; causer ces dégâts à l’ennemi. Quand une attaque est gênée, lancer un d4 de dégâts. Quand une attaque est améliorée, lancer un d12.",
+  "Damage": "Dégâts",
+  "Damage is dealt to HP first. Once HP is depleted, take damage to STR. After taking STR damage, make a STR Save. On failure, take an Injured condition and are incapacitated.": "D’abord retirés des PV. Quand il n’y a plus de PV, ils sont retirés de la FOR. Quand vous subissez des dégâts de FOR, faites une sauvegarde de FOR. Si elle échoue, vous subissez la condition Blessure et devennez souffrant.",
+  "Death": "La Mort",
+  "If STR is reduced to zero, or you are incapacitated for 6 turns, you die.": "Si la FOR est réduite à zéro (ou moins), ou si vous êtes souffrant pendant plus de 6 tours, vous mourrez.",
+  "Usage": "Usure",
+  "After combat, roll d6 for each weapon, ammunition and armour used. On 4-6, mark usage.": "Après le combat, lancer un d6 pour chaque arme, munition et armure utilisées. Sur un tirage de 4, 5 ou 6, cocher une case d'usage.",
+  "Short rest": "Repos court",
+  "Takes a turn. Restore 1d6+1 HP.": "Dure un tour. Restaure 1d6+1 PV.",
+  "Long rest": "Repos long",
+  "Takes a watch. Restore all HP. If HP is full, restore 1d6 to an ability score.": "Dure une garde. Restaure tous les PV. Si les PV sont à leur maximum, restaure un d6 à un attribut.",
+  "Full rest": "Repos complet",
+  "Takes a week. Fully restore HP and ability scores.": "Dure 1 semaine. Restaure les PV et les attributs à leurs valeurs maximum.",
+  "Invest 1-3 Power (up to number of unused dots)": "Choisissez la puissance de 1 à 3, au maximum le nombre de coches d’usage encore libres.",
+  "Roll d6 for each Power invested. Mark usage for each die of value 4-5.": "Lancer un d6 pour chaque point de puissance choisi. Cocher un usage pour chaque dé qui fait 4-6.",
+  "The spell effect happens, using [SUM] and [DICE]": "Le sort prend effet, utilisant [SOMME] et [DÉS].",
+  "Example with a fireball of power 2, the 2d6 roll is 4 and 3. A use is ticked, because of the 4. And, according to the description of the spell, the damage is 7[SUM] + 2[DICE], that is 9 points of damage!": "Exemple avec une boule de feu de puissance de 2, le tirage 2d6 est 3 et 3. Un usage est coché, à cause du 4. Et, selon la description du sort, les dégâts sont de 7[SOMME] + 2[DÉS], soit 9 points de dégâts !",
+  "Mishaps": "Incidents",
+  "For every 6 rolled, take d6 WIL damage. Make a WIL save, gain Mad condition if failed.": "Pour chaque 6, vous recevez un d6 dégâts de VOL. Faites une sauvegarde de VOL, vous gagnez la condition Folie en cas d'échec."
 }
