--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -3,6 +3,7 @@
   "en-US": "English US",
   "fr-FR": "Français",
   "Welcome to Mausrittes Sheet!": "Welcome to Mausrittes Sheet!",
+  "under licence": "under license",
   "Items": "Items",
   "Conditions": "Conditions",
   "Birthsign": "Birthsign",
@@ -25,6 +26,7 @@
   "STR ⇄ WIL": "STR ⇄ WIL",
   "DEX ⇄ WIL": "DEX ⇄ WIL",
   "No swap.": "No swap.",
+  "{price}p": "{price}p",
   "HP": "HP",
   "Max": "Max",
   "Current": "Current",
@@ -47,7 +49,9 @@
   "With disadvantage": "With disadvantage",
   "Need {score} or lower, roll {roll}.": "Need {score} or lower, roll {roll}.",
   "Create a new character...": "Create a new character...",
+  "Load": "Load",
   "Save": "Save",
+  "Saves": "Saves",
   "Delete": "Delete",
   "Empty": "Empty",
   "SUCCESS": "SUCCESS",
@@ -82,7 +86,7 @@
   "Spell": "Spell",
   "Item": "Item",
   "A custom item.": "A custom item.",
-  "The sheet will be erased. Do you confirm?": "The sheet of “{name}” will be erased. Do you confirm?",
+  "The sheet of “{name}” will be erased. Do you confirm?": "The sheet of “{name}” will be erased. Do you confirm?",
   "Confirm": "Confirm",
   "Yes": "Yes",
   "No": "No",
@@ -102,5 +106,12 @@
   "Both paws": "Both paws",
   "History": "History",
   "Manage your characters.": "Manage your characters.",
-  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?"
+  "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?": "The sheet of “{dest}” will be overwritten by “{name}”. Do you confirm?",
+  "The current sheet will be overwritten by “{name}”. Do you confirm?": "The current sheet will be overwritten by “{name}”. Do you confirm?",
+  "Welcome": "Welcome",
+  "Hirelings": "Hirelings",
+  "Recruit hireling...": "Recruit hireling...",
+  "Wages/day": "Wages/day",
+  "Dismiss": "Dismiss",
+  "The hireling of “{desc} {name}” will be dismissed. Do you confirm?": "The hireling of “{desc} {name}” will be dismissed. Do you confirm?"
 }
