fix: dice roll for check are prompted
fix: mouse creation dialog reset

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -95,7 +95,7 @@
   "Items and conditions drawer.": "Items and conditions drawer.",
   "Roll {dice}": "Roll {dice}",
   "“{name}” prepares for adventure...": "“{name}” prepares for adventure...",
-  "You may then swap any two attributes.": "You may then swap any two attributes.",
+  "You may swap any two attributes.": "You may swap any two attributes.",
   "You may choose a weapon below:": "You may choose a weapon below:",
   "You can take one item below:": "You can take one item below:",
   "Item from inherited your background of “{background}”": "Item from inherited your background of “{background}”",
