--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -95,7 +95,7 @@
   "Items and conditions drawer.": "Tiroir à objets et conditions",
   "Roll {dice}": "Lancer {dice}",
   "“{name}” prepares for adventure...": "« {name} » se prépare pour l'aventure…",
-  "You may then swap any two attributes.": "Vous pouvez intervertir deux des attributs.",
+  "You may swap any two attributes.": "Vous pouvez intervertir deux des attributs.",
   "You may choose a weapon below:": "Choisissez une arme ci-dessous :",
   "You can take one item below:": "Vous pouvez prendre un des objet ci-dessous :",
   "Item from inherited your background of “{background}”": "Objets hérités de votre passé de « {background} »",
