feat: But bank in tabs

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -118,5 +118,6 @@
   "Export": "Export",
   "“{name}” is now copied to clipboard.": "“{name}” is now copied to clipboard.",
   "Import": "Import",
-  "Paste your character here...": "Paste your character here..."
+  "Paste your character here...": "Paste your character here...",
+  "Drop item here, in your bank.": "Drop item here, in your bank."
 }
